<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password_field">Password Field</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_recipe_app">Welcome to Recipe App</string>
    <string name="enterYourEmail">Enter Your Email</string>
    <string name="login_welcome_text">Hi, Welcome Back! 👋</string>
    <string name="fui_email_hint">Email</string>
    <string name="fui_password_hint">Password</string>
    <string name="fui_sign_in_default">Sign in</string>
    <string name="fui_name_hint">First &amp; Last name</string>
    <string name="fui_title_register_email">Sign up</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Favorites</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About</string>
    <string name="heart_button" />
    <string name="imagefromapi" />
    <string name="some_text_from_api" />
    <string name="sign_out_message">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>
    <string name="show_more">show more\n</string>
    <string name="show_less">show less</string>
    <string name="favorites">Favorites</string>
    <string name="search_label">Search</string>
    <string name="about_us_label">About</string>
    <string name="remove_from_favorites">remove from favorites</string>
    <string name="about_us_label">About Us</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_favorites_confirmation_message">Remove from favorites</string>
    <string name="welcome">Welcome</string>
    <string name="about_the_app">About the App</string>
    <string name="description">Hungry for inspiration? We’re your culinary companions! Our app celebrates the joy of cooking, from secret family recipes to global flavors. Join us in the kitchen where every dish tells a delicious story!</string>
    <string name="about_us_title">About Us</string>
    <string name="first_member">Abdelrahman Mansour Mohamed</string>
    <string name="first_member_email">TextView</string>
    <string name="second_member">Abdelrahman Magdy Eid</string>
    <string name="second_member_email">Email: magdybody78@gmail.com</string>
    <string name="third_member">Hossam Eid Ibrahim</string>
    <string name="third_member_email">Email: eidhossam7@gmail.com</string>
    <string name="fourth_member">Youssef Sabry Ramzy</string>
    <string name="fourth_member_email">Email: youssef.sabry1200@gmail.com</string>
</resources>